<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GroupActivities.GroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/MainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_group_activity"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/plus_main_page_partner_finder"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_activity"
            android:textSize="18sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/stats_main_page_partner_finder"
            app:srcCompat="@drawable/map" />

        <TextView
            android:id="@+id/map_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_text_partners_text_main_page_partner_finder"
            android:textSize="18sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/group_activity_companies"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/plus_main_page_partner_finder"
            app:srcCompat="@drawable/enterprise" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companies"
            android:textSize="18sp"></TextView>

    </LinearLayout>


</LinearLayout>