<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:largeHeap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="50dp"
            android:text="@string/event_name_view_activity_page_partner_finder"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nickName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/nickname_view_activity_page_partner_finder"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="60dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/location_text_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_text_box_create_activity_partner_finder"
                    android:singleLine="true"
                    android:editable="false"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="60dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_text_box_create_activity_partner_finder"
                    android:singleLine="true"
                    android:editable="false"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="60dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/spinner_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sport_stats_activity_partner_finder"
                    android:singleLine="true"
                    android:editable="false"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/description_text_activity"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accept_button_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/colorLight1" />
        </LinearLayout>

    </LinearLayout>