<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/notification_interval"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">

        <NumberPicker
            android:id="@+id/hidrate_notificaion_interval_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/hidrate_notificaion_interval_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        </NumberPicker>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/hidrate_toggle_notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/notifications_bell_button" />

        <Button
            android:id="@+id/hidrate_notification_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/hidrate_notification_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:text="@string/set"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>